# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: alma_backend_ci.yaml  deploy_backend.yml
alma/: admin.py  admin_site.py  asgi.py  bulk_upload_view.py  settings.py  urls.py  wsgi.py
alma/bulk_upload/: BULK_LOAD_EXAMPLE.csv  __init__.py  controller.py  crud.py  service.py
alma/templates/admin/: change_list.html  upload_file.html  yourmodel_change_list.html
alma/tests/: test_admin_site.py
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/download_script_generator/: controller.py  crud.py  generator.py  service.py  template.sh
api/migrations/: 0001_initial.py  0002_alter_data_filepath.py  0002_disk_region_band_molecule_disk_region.py  0003_remove_data_is_viewable_data_image_link.py  0003_remove_molecule_file_data.py  0004_alter_data_options_rename_data_data_file.py  0004_data_size_in_mb_alter_data_filepath_and_more.py  0005_alter_band_disk_alter_data_molecule_and_more.py  0005_disk_features_region_description.py  0006_alter_disk_features.py  0006_delete_carouselimage_alter_region_name.py
api/serializers/: compact_serializers.py  full_context_serializers.py
api/tests/: test_carousel_image.py  test_full_context_serializers.py  test_metadata_views.py  test_serializers.py
content_management/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
content_management/migrations/: 0001_initial.py  0002_publication.py  0003_pressnews.py  0004_pressnews_news_type.py  0005_alter_publication_authors_and_more.py
content_management/tests/: test_carousel_image.py  test_press_news.py  test_publications.py
docs/: BACKOFFICE.md  MODELOS_DE_DATOS.md
