[tool.poetry]
name = "alma-backend"
version = "0.1.0"
description = "Backend de repositorio de datos de ALMA"
authors = ["Pablo <112183476+pabloscopeo@users.noreply.github.com>"]
readme = "README.md"

include = ["alma", "api", "content_management", "manage.py"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.27.2"
pillow = "^10.3.0"
django-cors-headers = "^4.3.1"
markdown = "^3.6"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    .git
    | .venv
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "build", "dist"]
