[project]
name = "alma-backend"
version = "0.1.0"
description = "Backend de repositorio de datos de ALMA"
authors = [{ name = "Pablo", email = "112183476+pabloscopeo@users.noreply.github.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "django>=5.0.3,<6",
    "djangorestframework>=3.15.1,<4",
    "drf-spectacular>=0.27.2,<0.28",
    "pillow>=10.3.0,<11",
    "django-cors-headers>=4.3.1,<5",
    "markdown~=3.6",
    "pandas>=2.2.2,<3",
    "python-dotenv>=1.0.1,<2",
    "django-environ>=0.11.2,<0.12",
    "gunicorn>=22.0.0,<23",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8",
    "black>=24.3.0,<25",
    "flake8-pyproject>=1.2.3,<2",
]

[tool.hatch.build.targets.sdist]
include = [
    "alma",
    "api",
    "content_management",
    "manage.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "alma",
    "api",
    "content_management",
    "manage.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    .git
    | .venv
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "build", "dist"]
